--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   telegram_web_app: ^0.0.6
+  razorpay_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
